# DRF

./: .env_exampel  README.md  pyproject.toml
config/: settings.py  urls.py
data_test/: Course_fixture.json  Lesson_fixture.json  Pay_fixture.json  User_fixture.json
education/: models.py  serializer.py  views.py
education/migrations/: 0001_initial.py  0002_alter_lesson_course.py
users/: models.py  serializer.py  views.py
users/migrations/: 0001_initial.py  0002_pay.py
